# finance

./: .gitignore  README.md  deploy.sh  docker-compose.yml
backend/: .dockerignore  Dockerfile  database.py  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  schemas.py  seed_data.py
backend/app/: main.py  schemas.py
backend/app/api/v1/: expenses.py  receipts.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  expense.py
backend/app/services/: expense_service.py  receipt_service.py
backend/data/: finance.db
backend/routers/: expenses.py  receipts.py
backend/tests/: conftest.py  test_expenses.py
backend/tests/api/v1/: test_expenses.py  test_receipts.py
backend/tests/services/: test_receipt_service.py
envs/: aws.env  local.env
frontend/: .dockerignore  Dockerfile  app.py  index.html  nginx.conf  package-lock.json  package.json  requirements.txt  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Layout.jsx  Sidebar.jsx
frontend/src/pages/: AddExpense.jsx  Dashboard.jsx  MonthlyView.jsx  UploadReceipt.jsx
receipt_parser/: .dockerignore  Dockerfile  docker-compose.yml  main.py  parser.py  pyproject.toml  requirements.txt
receipt_parser/app/: main.py
receipt_parser/app/data/receipts/: IMG_3477.HEIC
receipt_parser/app/routers/: extract.py
receipt_parser/app/services/: parser.py
receipt_parser/tests/: amazon_expenses_analisys_response.json  input.json
receipt_parser/tests/models/qwen-3.5/: Dockerfile  docker-compose.yml  main.py  requirements.txt
receipt_parser/tests/services/: parser.py
terraform/: main.tf  root.hcl  terraform.tfvars  variables.tf
terraform/storage/s3/: main.tf  (+2 more)
(+3 files in other folders)
