[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-finance-backend"
version = "0.1.0"
description = "My Finance backend API"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "sqlalchemy==2.0.36",
  "pydantic==2.9.2",
  "python-multipart==0.0.22",
  "httpx==0.27.2",
  "pillow==12.1.1",
  "pillow-heif==0.18.0",
  "aiofiles==23.2.1",
  "email-validator==2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "pytest-cov==5.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
