[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "receipt-parser"
version = "0.1.0"
description = "Receipt parser microservice"
requires-python = ">=3.11"
dependencies = [
	"fastapi==0.115.0",
	"uvicorn[standard]==0.30.6",
	"python-multipart==0.0.22",
	"qreader>=3.16.0",
    "opencv-python-headless==4.9.0.80"
]
