[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "receipt-parser"
version = "0.1.0"
description = "Receipt parser microservice"
requires-python = ">=3.11"
dependencies = [
	"fastapi==0.115.0",
	"uvicorn[standard]==0.30.6",
	"python-multipart==0.0.22",
	"qreader>=3.16.0",
	"opencv-python-headless==4.9.0.80",
	"pillow==12.1.1",
	"pillow-heif==0.18.0",
	"openai==2.24.0",
	"python-dotenv>=1.0.1",
]

[tool.setuptools.packages.find]
include = ["app*"]
